Fix bug in the sampled segments view. Revamp the feature generation process for more consistency.

--- a/Lightcurve.ipynb
+++ b/Lightcurve.ipynb
@@ -23,10 +23,10 @@
    },
    "outputs": [],
    "source": [
-    "plot_all(158159741,\n",
+    "plot_all(118412801,\n",
     "#          rpt_only=True,\n",
     "#          large=True,\n",
-    "#          bkspace=0.3,\n",
+    "#          bkspace=5.0,\n",
     "#          abs_xlim='3p',\n",
     "#          abs_offset=2,\n",
     "#          abs_xlim=(1690, 1710),\n",
@@ -73,7 +73,7 @@
     "             rpt_only=False):\n",
     "    tess_data_dir = f'/mnt/tess/lc'\n",
     "    reports_dir = f'/mnt/tess/rpt/png'\n",
-    "    tces_file = '/mnt/tess/astronet/tces-v5-all.csv'\n",
+    "    tces_file = '/mnt/tess/astronet/tces-v4-all.csv'\n",
     "\n",
     "    global tce_table\n",
     "    if tce_table is None:\n",
@@ -97,12 +97,14 @@
     "    n = plt.get_cmap('tab20')(8)\n",
     "    k = plt.get_cmap('tab20')(14)\n",
     "\n",
-    "    plotrows = 6\n",
+    "    plotrows = 10\n",
+    "    plotcols = 3\n",
     "    \n",
     "    if large:\n",
     "        fsize = (16, 9)\n",
     "    else:\n",
     "        fsize = (16, 4 * (plotrows + 1))\n",
+    "        plt.figure(figsize=fsize, dpi=dpi)\n",
     "    \n",
     "    tce = tce_table[tce_table.tic_id == tic]\n",
     "    period = tce.Period.values.item()\n",
@@ -129,11 +131,14 @@
     "            else:\n",
     "                plt.ylim(*abs_ylim)\n",
     "                \n",
-    "    def splt(dpi, c, n):\n",
+    "    nplotted = 0\n",
+    "    def splt(c=1):\n",
+    "        nonlocal nplotted\n",
     "        if large:\n",
     "            plt.figure(figsize=fsize, dpi=dpi)\n",
     "        else:\n",
-    "            plt.subplot(plotrows, c, n)\n",
+    "            plt.subplot(plotrows, plotcols // c, (nplotted // c) + 1)\n",
+    "        nplotted += c\n",
     "    \n",
     "    \n",
     "    file_names = tess_io.tess_filenames(tic, tess_data_dir)\n",
@@ -143,17 +148,12 @@
     "    fd = f[1].data[\"KSPSAP_FLUX\"]\n",
     "    fs = f[1].data[\"SAP_FLUX\"]\n",
     "    \n",
-    "    if large:\n",
-    "        plt.figure(figsize=fsize, dpi=dpi)\n",
-    "    else:\n",
-    "        plt.figure(figsize=fsize, dpi=dpi)\n",
-    "        plt.subplot(plotrows, 3, 1)\n",
-    "\n",
+    "    splt()\n",
     "    plt.plot(td, fs, '-', alpha=0.6, color=g, label='SAP')\n",
     "    config_abs_plot('fits data')\n",
     "    \n",
     "    \n",
-    "    splt(dpi, 3, 2)\n",
+    "    splt()\n",
     "    ut, uf = preprocess.read_and_process_light_curve(tic, tess_data_dir, 'SAP_FLUX')\n",
     "\n",
     "    input_mask = preprocess.get_spline_mask(ut, period, epoc, duration)\n",
@@ -168,17 +168,17 @@
     "    config_abs_plot(f'raw | bkspace: {mdata.bkspace}')\n",
     "    \n",
     "    \n",
-    "    splt(dpi, 3, 3)\n",
     "    ut, nf, fm = preprocess.detrend_and_filter(\n",
     "        tic, ut, uf, period, epoc, duration, bkspace)\n",
-    "    sft, sff, sfn = preprocess.phase_fold_and_sort_light_curve(ut, nf, period, epoc)\n",
+    "    sft, sff, sfn, sftm = preprocess.phase_fold_and_sort_light_curve(\n",
+    "        ut, nf, input_mask, period, epoc)\n",
     "\n",
+    "    splt()\n",
     "    plt.plot(sft, sff, 'o', markersize=3, alpha=0.6, c=o, label='spline')\n",
     "    sff_filtered = np.where((sff > 1.5) | (sff < -0.5), 0, sff)\n",
     "    if len(sff_filtered):\n",
-    "        fmt, fm, _ = preprocess.phase_fold_and_sort_light_curve(ut, fm, period, epoc)\n",
-    "        mask = np.where(fm, 1, min(sff_filtered))\n",
-    "        plt.plot(fmt, mask, '-', markersize=1, alpha=0.6, c=r, label='OOT')\n",
+    "        mask = np.where(sftm, 1, min(sff_filtered))\n",
+    "        plt.plot(sft, mask, '-', markersize=1, alpha=0.6, c=r, label='OOT')\n",
     "        title = f'phase folded ({int(max(sfn) + 1)} folds) / filtered'\n",
     "    else:\n",
     "        if len(sfn):\n",
@@ -201,101 +201,75 @@
     "    ex = generate_input_records._process_tce(row, bkspace)\n",
     "    \n",
     "    \n",
-    "    splt(dpi, 3, 4)\n",
-    "    plt.plot(ex.features.feature['global_view'].float_list.value, color=n)\n",
-    "    plt.ylim(-1, 1)\n",
-    "    plt.title('global')\n",
-    "\n",
-    "    splt(dpi, 3, 5)\n",
-    "    plt.plot(ex.features.feature['local_view'].float_list.value, color=n)\n",
-    "    plt.ylim(-1, 1)\n",
-    "    plt.title('local')\n",
-    "\n",
-    "    splt(dpi, 3, 6)\n",
-    "    plt.plot(ex.features.feature['secondary_view'].float_list.value, color=n)\n",
-    "    plt.ylim(-1, 1)\n",
-    "    plt.title('secondary')\n",
-    "\n",
-    "    \n",
-    "    def plot_w_scatter(view, std):\n",
+    "    def plot_w_scatter(view, std, title, mask=None):\n",
+    "        splt()\n",
     "        view = np.array(ex.features.feature[view].float_list.value)\n",
     "        std = np.array(ex.features.feature[std].float_list.value)\n",
-    "#         plt.plot(view - std, color=o)\n",
     "        plt.plot(std, color=o)\n",
     "        plt.plot(view, color=n)\n",
-    "#         plt.plot(view + std, color=o)\n",
+    "        if mask:\n",
+    "            plt.plot(np.array(ex.features.feature[mask].float_list.value), color=r)\n",
+    "        plt.title(title)\n",
     "        \n",
-    "    splt(dpi, 3, 7)\n",
-    "    plot_w_scatter('global_view', 'global_std')\n",
-    "    plt.title('global with scatter')\n",
-    "\n",
-    "    splt(dpi, 3, 8)\n",
-    "    plot_w_scatter('local_view', 'local_std')\n",
-    "    plt.title('local with scatter')\n",
-    "\n",
-    "    splt(dpi, 3, 9)\n",
-    "    plot_w_scatter('secondary_view', 'secondary_std')\n",
-    "    plt.title('secondary with scatter')\n",
-    "\n",
-    "\n",
-    "    splt(dpi, 1, 4)\n",
-    "    img = ex.features.feature['sample_segments_view'].float_list.value\n",
-    "    img = np.reshape(img, (101, -1))\n",
-    "    n_transits = img.shape[1] // 2\n",
-    "    for i in range(n_transits):\n",
-    "        view = img[:, 2 * i]\n",
-    "        mask = img[:, 2 * i + 1] > 0\n",
-    "        plt.plot(np.where(mask, view, np.nan))\n",
-    "    plt.title(f'{n_transits} sample segments, densest first, ties broken at random')\n",
-    "    \n",
-    "\n",
-    "    splt(dpi, 3, 13)\n",
-    "    plt.plot(ex.features.feature['global_view_half_period'].float_list.value, color=n)\n",
-    "    plt.ylim(-1, 1)\n",
-    "    plt.title('global half period')\n",
-    "    \n",
-    "    splt(dpi, 3, 14)\n",
-    "    plt.plot(ex.features.feature['global_view_double_period'].float_list.value, color=n)\n",
-    "    plt.ylim(-1, 1)\n",
-    "    plt.title('global double period (shifted)')\n",
-    "\n",
-    "    splt(dpi, 3, 15)\n",
-    "    plt.plot(ex.features.feature['global_view_0.3'].float_list.value, color=n)\n",
-    "    plt.ylim(-1, 1)\n",
-    "    plt.title('global @bkspace 0.3')\n",
-    "\n",
-    "    splt(dpi, 3, 16)\n",
-    "    plt.plot(ex.features.feature['global_view_0.7'].float_list.value, color=n)\n",
-    "    plt.ylim(-1, 1)\n",
-    "    plt.title('global @bkspace 0.7')\n",
-    "    \n",
-    "    splt(dpi, 3, 17)\n",
-    "    plt.plot(ex.features.feature['global_view_1.5'].float_list.value, color=n)\n",
-    "    plt.ylim(-1, 1)\n",
-    "    plt.title('global @bkspace 1.5')\n",
-    "    \n",
-    "    splt(dpi, 3, 18)\n",
-    "    plt.plot(ex.features.feature['global_view_5.0'].float_list.value, color=n)\n",
-    "    plt.ylim(-1, 1)\n",
-    "    plt.title('global @bkspace 5.0')\n",
+    "    def plot_norm(view, title):\n",
+    "        splt()\n",
+    "        plt.plot(ex.features.feature['global_view_half_period'].float_list.value, color=n)\n",
+    "        plt.ylim(-1, 1)\n",
+    "        plt.title('global half period')    \n",
     "        \n",
+    "        \n",
+    "    def plot_segments(view, tag):\n",
+    "        splt(c=3)\n",
+    "        img = ex.features.feature[view].float_list.value\n",
+    "        img = np.reshape(img, (101, -1))\n",
+    "        n_transits = img.shape[1] // 2\n",
+    "        for i in range(n_transits):\n",
+    "            view = img[:, 2 * i]\n",
+    "            mask = img[:, 2 * i + 1] > 0\n",
+    "            plt.plot(np.where(mask, view, np.nan))\n",
+    "        plt.title(f'{n_transits} sample segments, densest first, ties broken at random {tag}')\n",
+    "        \n",
+    "        \n",
+    "    plot_w_scatter('global_view', 'global_std', 'global', 'global_transit_mask')\n",
+    "    plot_w_scatter('local_view', 'local_std', 'local')\n",
+    "    plot_w_scatter('secondary_view', 'secondary_std', 'secondary')\n",
+    "\n",
+    "    plot_norm('global_view_half_period', 'global half period')\n",
+    "    plot_norm('global_view_double_period', 'global double period (shifted)')\n",
+    "    splt()\n",
+    "\n",
+    "    plot_segments('sample_segments_view', '')\n",
+    "    \n",
+    "\n",
+    "    plot_w_scatter('global_view_0.3', 'global_std_0.3', 'global @ 0.3')\n",
+    "    plot_w_scatter('local_view_0.3', 'local_std_0.3', 'local @ 0.3')\n",
+    "    plot_w_scatter('secondary_view_0.3', 'secondary_std_0.3', 'secondary @ 0.3')\n",
+    "\n",
+    "    plot_norm('global_view_half_period_0.3', 'global half period @ 0.3')\n",
+    "    plot_norm('global_view_double_period_0.3', 'global double period (shifted) @ 0.3')\n",
+    "    splt()\n",
+    "\n",
+    "    plot_segments('sample_segments_view_0.3', ' @ 0.3')\n",
+    "    \n",
+    "\n",
+    "    plot_w_scatter('global_view_5.0', 'global_std_5.0', 'global @ 5.0')\n",
+    "    plot_w_scatter('local_view_5.0', 'local_std_5.0', 'local @ 5.0')\n",
+    "    plot_w_scatter('secondary_view_5.0', 'secondary_std_5.0', 'secondary @ 5.0')\n",
+    "\n",
+    "    plot_norm('global_view_half_period_5.0', 'global half period @ 5.0')\n",
+    "    plot_norm('global_view_double_period_5.0', 'global double period (shifted) @ 5.0')\n",
+    "    splt()\n",
+    "\n",
+    "    plot_segments('sample_segments_view_5.0', ' @ 5.0')\n",
+    "\n",
+    "    \n",
     "    try:\n",
     "        im = plt.imread(f'{reports_dir}/TIC{tic}.png')\n",
     "        plt.figure(figsize=(12, 8), dpi=dpi)\n",
     "        plt.axis('off')\n",
     "        _ = plt.imshow(im)\n",
     "    except FileNotFoundError:\n",
-    "        print('-- no report file --')        \n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# To investigate spline errors:\n",
-    "# 284890288, 312288232"
+    "        print('-- no report file --')\n"
    ]
   }
  ],
