Fix binning bug in sampled segments view and increase the resolution, add transit mask view, improve consistency of features, add transit mask feature to model.

--- a/Lightcurve.ipynb
+++ b/Lightcurve.ipynb
@@ -97,7 +97,7 @@
     "    n = plt.get_cmap('tab20')(8)\n",
     "    k = plt.get_cmap('tab20')(14)\n",
     "\n",
-    "    plotrows = 10\n",
+    "    plotrows = 11\n",
     "    plotcols = 3\n",
     "    \n",
     "    if large:\n",
@@ -213,15 +213,15 @@
     "        \n",
     "    def plot_norm(view, title):\n",
     "        splt()\n",
-    "        plt.plot(ex.features.feature['global_view_half_period'].float_list.value, color=n)\n",
+    "        plt.plot(ex.features.feature[view].float_list.value, color=n)\n",
     "        plt.ylim(-1, 1)\n",
-    "        plt.title('global half period')    \n",
+    "        plt.title(title)    \n",
     "        \n",
     "        \n",
     "    def plot_segments(view, tag):\n",
     "        splt(c=3)\n",
     "        img = ex.features.feature[view].float_list.value\n",
-    "        img = np.reshape(img, (101, -1))\n",
+    "        img = np.reshape(img, (-1, 14))\n",
     "        n_transits = img.shape[1] // 2\n",
     "        for i in range(n_transits):\n",
     "            view = img[:, 2 * i]\n",
@@ -231,37 +231,32 @@
     "        \n",
     "        \n",
     "    plot_w_scatter('global_view', 'global_std', 'global', 'global_transit_mask')\n",
+    "    plot_w_scatter('global_view_0.3', 'global_std_0.3', 'global @ 0.3', 'global_transit_mask_0.3')\n",
+    "    plot_w_scatter('global_view_5.0', 'global_std_5.0', 'global @ 5.0', 'global_transit_mask_5.0')\n",
+    "\n",
+    "    plot_w_scatter('global_view', 'global_std', 'global', 'global_transit_mask')\n",
     "    plot_w_scatter('local_view', 'local_std', 'local')\n",
     "    plot_w_scatter('secondary_view', 'secondary_std', 'secondary')\n",
-    "\n",
     "    plot_norm('global_view_half_period', 'global half period')\n",
     "    plot_norm('global_view_double_period', 'global double period (shifted)')\n",
     "    splt()\n",
-    "\n",
     "    plot_segments('sample_segments_view', '')\n",
-    "    \n",
     "\n",
-    "    plot_w_scatter('global_view_0.3', 'global_std_0.3', 'global @ 0.3')\n",
+    "    plot_w_scatter('global_view_0.3', 'global_std_0.3', 'global @ 0.3', 'global_transit_mask_0.3')\n",
     "    plot_w_scatter('local_view_0.3', 'local_std_0.3', 'local @ 0.3')\n",
     "    plot_w_scatter('secondary_view_0.3', 'secondary_std_0.3', 'secondary @ 0.3')\n",
-    "\n",
     "    plot_norm('global_view_half_period_0.3', 'global half period @ 0.3')\n",
     "    plot_norm('global_view_double_period_0.3', 'global double period (shifted) @ 0.3')\n",
     "    splt()\n",
-    "\n",
     "    plot_segments('sample_segments_view_0.3', ' @ 0.3')\n",
-    "    \n",
     "\n",
-    "    plot_w_scatter('global_view_5.0', 'global_std_5.0', 'global @ 5.0')\n",
+    "    plot_w_scatter('global_view_5.0', 'global_std_5.0', 'global @ 5.0', 'global_transit_mask_5.0')\n",
     "    plot_w_scatter('local_view_5.0', 'local_std_5.0', 'local @ 5.0')\n",
     "    plot_w_scatter('secondary_view_5.0', 'secondary_std_5.0', 'secondary @ 5.0')\n",
-    "\n",
     "    plot_norm('global_view_half_period_5.0', 'global half period @ 5.0')\n",
     "    plot_norm('global_view_double_period_5.0', 'global double period (shifted) @ 5.0')\n",
     "    splt()\n",
-    "\n",
     "    plot_segments('sample_segments_view_5.0', ' @ 5.0')\n",
-    "\n",
     "    \n",
     "    try:\n",
     "        im = plt.imread(f'{reports_dir}/TIC{tic}.png')\n",
