--- a/Preprocess.ipynb
+++ b/Preprocess.ipynb
@@ -22,7 +22,7 @@
     "\n",
     "tces_file = '/mnt/tess/labels/tce_bls_instar+old.csv'\n",
     "ext_data_file = '/mnt/tess/labels/ext_mast_data.csv'\n",
-    "labels_file = '/mnt/tess/labels/labels_v5.csv'\n",
+    "labels_file = '/mnt/tess/labels/labels_v4.csv'\n",
     "splits_file = '/mnt/tess/labels/splits_v3.csv'\n",
     "\n",
     "\n",
@@ -104,7 +104,7 @@
     "# t_train.to_csv('/mnt/tess/astronet/tces-v4-train.csv')\n",
     "# t_val.to_csv('/mnt/tess/astronet/tces-v4-val.csv')\n",
     "# t_test.to_csv('/mnt/tess/astronet/tces-v4-test.csv')\n",
-    "all_table.to_csv('/mnt/tess/astronet/tces-v5-all.csv')"
+    "# all_table.to_csv('/mnt/tess/astronet/tces-v4-all.csv')"
    ]
   },
   {
