Use slightly more sensible hyperparameter values.

--- a/Lightcurve.ipynb
+++ b/Lightcurve.ipynb
@@ -23,7 +23,7 @@
    },
    "outputs": [],
    "source": [
-    "plot_all(118412801,\n",
+    "plot_all(141753278,\n",
     "#          rpt_only=True,\n",
     "#          large=True,\n",
     "#          bkspace=5.0,\n",
@@ -208,7 +208,8 @@
     "        plt.plot(std, color=o)\n",
     "        plt.plot(view, color=n)\n",
     "        if mask:\n",
-    "            plt.plot(np.array(ex.features.feature[mask].float_list.value), color=r)\n",
+    "            plt.plot(\n",
+    "                -np.array(ex.features.feature[mask].float_list.value), color=r, alpha=0.5, linestyle='--')\n",
     "        plt.title(title)\n",
     "        \n",
     "    def plot_norm(view, title):\n",
@@ -230,9 +231,9 @@
     "        plt.title(f'{n_transits} sample segments, densest first, ties broken at random {tag}')\n",
     "        \n",
     "        \n",
-    "    plot_w_scatter('global_view', 'global_std', 'global', 'global_transit_mask')\n",
-    "    plot_w_scatter('global_view_0.3', 'global_std_0.3', 'global @ 0.3', 'global_transit_mask_0.3')\n",
-    "    plot_w_scatter('global_view_5.0', 'global_std_5.0', 'global @ 5.0', 'global_transit_mask_5.0')\n",
+    "    plot_w_scatter('global_view', 'global_std', 'global')\n",
+    "    plot_w_scatter('global_view_0.3', 'global_std_0.3', 'global @ 0.3')\n",
+    "    plot_w_scatter('global_view_5.0', 'global_std_5.0', 'global @ 5.0')\n",
     "\n",
     "    plot_w_scatter('global_view', 'global_std', 'global', 'global_transit_mask')\n",
     "    plot_w_scatter('local_view', 'local_std', 'local')\n",
