Override md 1B/N-vs-allJ to J. Count et votes.

--- a/Preprocess.ipynb
+++ b/Preprocess.ipynb
@@ -22,7 +22,7 @@
     "\n",
     "tces_file = '/mnt/tess/labels/tce_bls_instar+old.csv'\n",
     "ext_data_file = '/mnt/tess/labels/ext_mast_data.csv'\n",
-    "labels_file = '/mnt/tess/labels/labels_v4.csv'\n",
+    "labels_file = '/mnt/tess/labels/labels_tmp.csv'\n",
     "splits_file = '/mnt/tess/labels/splits_v3.csv'\n",
     "\n",
     "\n",
@@ -55,7 +55,7 @@
     "\n",
     "labels_table = pd.read_csv(labels_file, header=0, low_memory=False)\n",
     "disps = ['E', 'J', 'N', 'S', 'B']\n",
-    "users = ['av', 'md', 'ch', 'as', 'mk']\n",
+    "users = ['av', 'md', 'ch', 'as', 'mk', 'et']\n",
     "\n",
     "for d in disps:\n",
     "    labels_table[f'disp_{d}'] = 0\n",
@@ -66,8 +66,17 @@
     "        row[f'disp_{row[\"Final\"]}'] = 1\n",
     "    else:\n",
     "        for user in users:\n",
+    "            # Override md's votes when they're 1-to-all against J\n",
+    "            if user == 'md' and row[user] in ('B', 'N'):\n",
+    "                others = [\n",
+    "                    row[u] for u in users\n",
+    "                    if row[u] and u != 'md' and not(isinstance(row[u], float) and np.isnan(row[u]))]\n",
+    "                if all(o == 'J' for o in others):\n",
+    "                    row[f'disp_J'] += 1\n",
+    "                    continue\n",
     "            if a[user] and row[user] and row[user] != 'U':\n",
     "                row[f'disp_{row[user]}'] += 1\n",
+    "                        \n",
     "    return row\n",
     "\n",
     "labels_table['tic_id'] = labels_table['TIC ID']\n",
@@ -104,7 +113,7 @@
     "# t_train.to_csv('/mnt/tess/astronet/tces-v4-train.csv')\n",
     "# t_val.to_csv('/mnt/tess/astronet/tces-v4-val.csv')\n",
     "# t_test.to_csv('/mnt/tess/astronet/tces-v4-test.csv')\n",
-    "# all_table.to_csv('/mnt/tess/astronet/tces-v4-all.csv')"
+    "# all_table.to_csv('/mnt/tess/astronet/tces-tmp-all.csv')"
    ]
   },
   {
