--- a/Lightcurve.ipynb
+++ b/Lightcurve.ipynb
@@ -23,12 +23,12 @@
    },
    "outputs": [],
    "source": [
-    "plot_all(141753278,\n",
+    "plot_all(298647682,\n",
     "#          rpt_only=True,\n",
     "#          large=True,\n",
-    "#          bkspace=5.0,\n",
+    "#          bkspace=1.5,\n",
     "#          abs_xlim='3p',\n",
-    "#          abs_offset=2,\n",
+    "#          abs_offset=18,\n",
     "#          abs_xlim=(1690, 1710),\n",
     "#          abs_ylim='3%',\n",
     "#          abs_ylim=(0.9975, 1.0025),\n",
@@ -73,7 +73,7 @@
     "             rpt_only=False):\n",
     "    tess_data_dir = f'/mnt/tess/lc'\n",
     "    reports_dir = f'/mnt/tess/rpt/png'\n",
-    "    tces_file = '/mnt/tess/astronet/tces-v4-all.csv'\n",
+    "    tces_file = '/mnt/tess/astronet/tces-tmp-all.csv'\n",
     "\n",
     "    global tce_table\n",
     "    if tce_table is None:\n",
@@ -227,9 +227,8 @@
     "        for i in range(n_transits):\n",
     "            view = img[:, 2 * i]\n",
     "            mask = img[:, 2 * i + 1] > 0\n",
-    "            plt.plot(np.where(mask, view, np.nan))\n",
+    "            plt.plot(np.where(mask, view, np.nan), marker='.')\n",
     "        plt.title(f'{n_transits} sample segments, densest first, ties broken at random {tag}')\n",
-    "        \n",
     "        \n",
     "    plot_w_scatter('global_view', 'global_std', 'global')\n",
     "    plot_w_scatter('global_view_0.3', 'global_std_0.3', 'global @ 0.3')\n",
