--- a/Predict.ipynb
+++ b/Predict.ipynb
@@ -8,9 +8,9 @@
    "source": [
     "import os\n",
     "\n",
-    "chkpt_root = '/mnt/tess/astronet/checkpoints/extended_18_run_7'\n",
-    "data_files = '/mnt/tess/astronet/tfrecords-18-val/*'\n",
-    "tces_file = '/mnt/tess/astronet/tces-v3-val.csv'\n",
+    "chkpt_root = '/mnt/tess/astronet/checkpoints/extended_20_run_12'\n",
+    "data_files = '/mnt/tess/astronet/tfrecords-20-train/*'\n",
+    "tces_file = '/mnt/tess/astronet/tces-v4-train.csv'\n",
     "\n",
     "nruns = 10\n",
     "\n",
@@ -169,7 +169,7 @@
     "        result = result.append(preds[filter])\n",
     "    return result\n",
     "\n",
-    "compare(ensemble_preds, preds.index == 158159741)"
+    "compare(ensemble_preds, preds.index == 118412801)"
    ]
   },
   {
@@ -246,7 +246,7 @@
    "source": [
     "from matplotlib import pyplot as plt\n",
     "\n",
-    "ps, rs = ([], [])\n",
+    "ps, rs, ths = ([], [], [])\n",
     "th = np.max(pred_es)\n",
     "while th >= 0.0:\n",
     "    p, r = pr_at_th(th)\n",
@@ -256,9 +256,20 @@
     "    else:\n",
     "        ps.append(1.0)\n",
     "        rs.append(0.0)\n",
+    "    ths.append(th)\n",
     "    th -= 0.0005\n",
     "    \n",
-    "fig, ax = plt.subplots(figsize=(6, 4), dpi=200)\n",
+    "from sklearn import metrics\n",
+    "\n",
+    "print(f'AUC: {metrics.auc(rs, ps)}, max R: {max(rs)}, max P: {max(ps)}')\n",
+    "    \n",
+    "i = len(rs) - 1\n",
+    "while rs[i] == 1.0:\n",
+    "    i -= 1\n",
+    "i += 1\n",
+    "print(f'100% recall at: {int(ps[i] * 100)}%, threshold: {ths[i]}')\n",
+    "\n",
+    "fig, ax = plt.subplots(figsize=(6, 3.7), dpi=200)\n",
     "\n",
     "ax.spines['top'].set_color('#808080')\n",
     "ax.spines['right'].set_color('#808080')\n",
@@ -275,17 +286,6 @@
     "plt.ylim((0.0, 1.0))\n",
     "\n",
     "_ = plt.plot(rs, ps)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn import metrics\n",
-    "\n",
-    "metrics.auc(rs, ps)"
    ]
   }
  ],
