--- a/Preprocess.ipynb
+++ b/Preprocess.ipynb
@@ -66,14 +66,14 @@
     "        row[f'disp_{row[\"Final\"]}'] = 1\n",
     "    else:\n",
     "        for user in users:\n",
-    "            # Override md's votes when they're 1-to-all against J\n",
-    "            if user == 'md' and row[user] in ('B', 'N'):\n",
-    "                others = [\n",
-    "                    row[u] for u in users\n",
-    "                    if row[u] and u != 'md' and not(isinstance(row[u], float) and np.isnan(row[u]))]\n",
-    "                if all(o == 'J' for o in others):\n",
-    "                    row[f'disp_J'] += 1\n",
-    "                    continue\n",
+    "#             # Override md's votes when they're 1-to-all against J\n",
+    "#             if user == 'md' and row[user] in ('B', 'N'):\n",
+    "#                 others = [\n",
+    "#                     row[u] for u in users\n",
+    "#                     if row[u] and u != 'md' and not(isinstance(row[u], float) and np.isnan(row[u]))]\n",
+    "#                 if all(o == 'J' for o in others):\n",
+    "#                     row[f'disp_J'] += 1\n",
+    "#                     continue\n",
     "            if a[user] and row[user] and row[user] != 'U':\n",
     "                row[f'disp_{row[user]}'] += 1\n",
     "                        \n",
