--- a/Train.ipynb
+++ b/Train.ipynb
@@ -21,7 +21,7 @@
     "      '--train_files', '/mnt/tess/astronet/tfrecords-20-train/*',\n",
     "      '--eval_files', '/mnt/tess/astronet/tfrecords-20-val/*',\n",
     "      '--model_dir', '',\n",
-    "      '--train_epochs', '15',\n",
+    "      '--train_epochs', '1',\n",
     "      '--train_steps', '10'\n",
     "    ])\n",
     "\n",
@@ -29,10 +29,10 @@
     "\n",
     "    model_class = models.get_model_class(model_name)\n",
     "    model = model_class(config)\n",
-    "\n",
-    "    train.train(model, config)\n",
     "    \n",
-    "run_training()"
+    "    train.train(model, config)\n",
+    "\n",
+    "m = run_training()"
    ]
   }
  ],
