Fix binning parameter to match 30 minute cadence. Add secodary phase feature. Reset empty bins to 0 instead of -1. Add normalization scale feature for local and secondary. Update data file names.

--- a/Lightcurve.ipynb
+++ b/Lightcurve.ipynb
@@ -23,15 +23,15 @@
    },
    "outputs": [],
    "source": [
-    "plot_all(298647682,\n",
+    "plot_all(16740101,\n",
     "#          rpt_only=True,\n",
     "#          large=True,\n",
-    "#          bkspace=1.5,\n",
+    "#          bkspace=5.0,\n",
     "#          abs_xlim='3p',\n",
-    "#          abs_offset=18,\n",
-    "#          abs_xlim=(1690, 1710),\n",
+    "#          abs_offset=5,\n",
+    "#          abs_xlim=(1863.5, 1865),\n",
     "#          abs_ylim='3%',\n",
-    "#          abs_ylim=(0.9975, 1.0025),\n",
+    "#          abs_ylim=(0.7, 1.1),\n",
     "        )"
    ]
   },
@@ -234,25 +234,34 @@
     "    plot_w_scatter('global_view_0.3', 'global_std_0.3', 'global @ 0.3')\n",
     "    plot_w_scatter('global_view_5.0', 'global_std_5.0', 'global @ 5.0')\n",
     "\n",
+    "    sec_phase = ex.features.feature['secondary_phase'].float_list.value[0]\n",
+    "    loc_scale = ex.features.feature['local_scale'].float_list.value[0]\n",
+    "    sec_scale = ex.features.feature['secondary_scale'].float_list.value[0]\n",
     "    plot_w_scatter('global_view', 'global_std', 'global', 'global_transit_mask')\n",
-    "    plot_w_scatter('local_view', 'local_std', 'local')\n",
-    "    plot_w_scatter('secondary_view', 'secondary_std', 'secondary')\n",
+    "    plot_w_scatter('local_view', 'local_std', f'local / {loc_scale:0.3}')\n",
+    "    plot_w_scatter('secondary_view', 'secondary_std', f'secondary ({sec_phase:0.2}) / {sec_scale:0.3}')\n",
     "    plot_norm('global_view_half_period', 'global half period')\n",
     "    plot_norm('global_view_double_period', 'global double period (shifted)')\n",
     "    splt()\n",
     "    plot_segments('sample_segments_view', '')\n",
     "\n",
+    "    sec_phase = ex.features.feature['secondary_phase_0.3'].float_list.value[0]\n",
+    "    loc_scale = ex.features.feature['local_scale_0.3'].float_list.value[0]\n",
+    "    sec_scale = ex.features.feature['secondary_scale_0.3'].float_list.value[0]\n",
     "    plot_w_scatter('global_view_0.3', 'global_std_0.3', 'global @ 0.3', 'global_transit_mask_0.3')\n",
-    "    plot_w_scatter('local_view_0.3', 'local_std_0.3', 'local @ 0.3')\n",
-    "    plot_w_scatter('secondary_view_0.3', 'secondary_std_0.3', 'secondary @ 0.3')\n",
+    "    plot_w_scatter('local_view_0.3', 'local_std_0.3', f'local @ 0.3 / {loc_scale:0.3}')\n",
+    "    plot_w_scatter('secondary_view_0.3', 'secondary_std_0.3', f'secondary @ 0.3 ({sec_phase:0.2}) / {sec_scale:0.3}')\n",
     "    plot_norm('global_view_half_period_0.3', 'global half period @ 0.3')\n",
     "    plot_norm('global_view_double_period_0.3', 'global double period (shifted) @ 0.3')\n",
     "    splt()\n",
     "    plot_segments('sample_segments_view_0.3', ' @ 0.3')\n",
     "\n",
+    "    sec_phase = ex.features.feature['secondary_phase_5.0'].float_list.value[0]\n",
+    "    loc_scale = ex.features.feature['local_scale_0.3'].float_list.value[0]\n",
+    "    sec_scale = ex.features.feature['secondary_scale_5.0'].float_list.value[0]\n",
     "    plot_w_scatter('global_view_5.0', 'global_std_5.0', 'global @ 5.0', 'global_transit_mask_5.0')\n",
-    "    plot_w_scatter('local_view_5.0', 'local_std_5.0', 'local @ 5.0')\n",
-    "    plot_w_scatter('secondary_view_5.0', 'secondary_std_5.0', 'secondary @ 5.0')\n",
+    "    plot_w_scatter('local_view_5.0', 'local_std_5.0', f'local @ 5.0 / {loc_scale:0.3}')\n",
+    "    plot_w_scatter('secondary_view_5.0', 'secondary_std_5.0', f'secondary @ 5.0 ({sec_phase:0.2}) / {sec_scale:0.3}')\n",
     "    plot_norm('global_view_half_period_5.0', 'global half period @ 5.0')\n",
     "    plot_norm('global_view_double_period_5.0', 'global double period (shifted) @ 5.0')\n",
     "    splt()\n",
