--- a/Preprocess.ipynb
+++ b/Preprocess.ipynb
@@ -22,7 +22,7 @@
     "\n",
     "tces_file = '/mnt/tess/labels/tce_bls_instar+old.csv'\n",
     "ext_data_file = '/mnt/tess/labels/ext_mast_data.csv'\n",
-    "labels_file = '/mnt/tess/labels/labels_tmp.csv'\n",
+    "labels_file = '/mnt/tess/labels/labels_v6.csv'\n",
     "splits_file = '/mnt/tess/labels/splits_v3.csv'\n",
     "\n",
     "\n",
@@ -110,10 +110,10 @@
     "print(f'Split sizes. Train: {len(t_train)}; Valid: {len(t_val)}; Test: {len(t_test)}')\n",
     "\n",
     "\n",
-    "# t_train.to_csv('/mnt/tess/astronet/tces-v4-train.csv')\n",
-    "# t_val.to_csv('/mnt/tess/astronet/tces-v4-val.csv')\n",
-    "# t_test.to_csv('/mnt/tess/astronet/tces-v4-test.csv')\n",
-    "# all_table.to_csv('/mnt/tess/astronet/tces-tmp-all.csv')"
+    "t_train.to_csv('/mnt/tess/astronet/tces-v6-train.csv')\n",
+    "t_val.to_csv('/mnt/tess/astronet/tces-v6-val.csv')\n",
+    "t_test.to_csv('/mnt/tess/astronet/tces-v6-test.csv')\n",
+    "all_table.to_csv('/mnt/tess/astronet/tces-tmp-all.csv')"
    ]
   },
   {
