Expand file pattern.

--- a/Lightcurve.ipynb
+++ b/Lightcurve.ipynb
@@ -23,7 +23,7 @@
    },
    "outputs": [],
    "source": [
-    "plot_all(219928884,\n",
+    "plot_all(434323682,\n",
     "#          rpt_only=True,\n",
     "#          large=True,\n",
     "#          bkspace=5.0,\n",
@@ -73,7 +73,8 @@
     "             rpt_only=False):\n",
     "    tess_data_dir = f'/mnt/tess/lc'\n",
     "    reports_dir = f'/mnt/tess/rpt/png'\n",
-    "    tces_file = '/mnt/tess/astronet/tces-tmp-all.csv'\n",
+    "    tces_file = '/mnt/tess/astronet/tces-s33_cam1_sample.csv'\n",
+    "#     tces_file = '/mnt/tess/astronet/tces-tmp-all.csv'\n",
     "\n",
     "    global tce_table\n",
     "    if tce_table is None:\n",
