--- a/Preprocess.ipynb
+++ b/Preprocess.ipynb
@@ -110,10 +110,10 @@
     "print(f'Split sizes. Train: {len(t_train)}; Valid: {len(t_val)}; Test: {len(t_test)}')\n",
     "\n",
     "\n",
-    "t_train.to_csv('/mnt/tess/astronet/tces-v6-train.csv')\n",
-    "t_val.to_csv('/mnt/tess/astronet/tces-v6-val.csv')\n",
-    "t_test.to_csv('/mnt/tess/astronet/tces-v6-test.csv')\n",
-    "all_table.to_csv('/mnt/tess/astronet/tces-tmp-all.csv')"
+    "# t_train.to_csv('/mnt/tess/astronet/tces-v6-train.csv')\n",
+    "# t_val.to_csv('/mnt/tess/astronet/tces-v6-val.csv')\n",
+    "# t_test.to_csv('/mnt/tess/astronet/tces-v6-test.csv')\n",
+    "# all_table.to_csv('/mnt/tess/astronet/tces-tmp-all.csv')"
    ]
   },
   {
