--- a/Lightcurve.ipynb
+++ b/Lightcurve.ipynb
@@ -23,15 +23,15 @@
    },
    "outputs": [],
    "source": [
-    "plot_all(434323682,\n",
+    "plot_all(37496370,\n",
     "#          rpt_only=True,\n",
     "#          large=True,\n",
-    "#          bkspace=5.0,\n",
+    "#          bkspace=0.3,\n",
     "#          abs_xlim='3p',\n",
-    "#          abs_offset=5,\n",
-    "#          abs_xlim=(1863.5, 1865),\n",
+    "#          abs_offset=1477,\n",
+    "#          abs_xlim=(1300, 2500),\n",
     "#          abs_ylim='3%',\n",
-    "#          abs_ylim=(0.7, 1.1),\n",
+    "#          abs_ylim=(0.975, 1.01),\n",
     "        )"
    ]
   },
@@ -73,7 +73,7 @@
     "             rpt_only=False):\n",
     "    tess_data_dir = f'/mnt/tess/lc'\n",
     "    reports_dir = f'/mnt/tess/rpt/png'\n",
-    "    tces_file = '/mnt/tess/astronet/tces-s33_cam1_sample.csv'\n",
+    "    tces_file = '/mnt/tess/astronet/tces-s33_cam2ccd14_sample.csv'\n",
     "#     tces_file = '/mnt/tess/astronet/tces-tmp-all.csv'\n",
     "\n",
     "    global tce_table\n",
@@ -275,6 +275,17 @@
     "        _ = plt.imshow(im)\n",
     "    except FileNotFoundError:\n",
     "        print('-- no report file --')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# bug: 220336762\n",
+    "# interpret predictions: 158869292\n",
+    "# examine features that can catch the transit: 37496370"
    ]
   }
  ],
