--- a/Lightcurve.ipynb
+++ b/Lightcurve.ipynb
@@ -23,7 +23,7 @@
    },
    "outputs": [],
    "source": [
-    "plot_all(37496370,\n",
+    "plot_all(373453507,\n",
     "#          rpt_only=True,\n",
     "#          large=True,\n",
     "#          bkspace=0.3,\n",
@@ -32,6 +32,7 @@
     "#          abs_xlim=(1300, 2500),\n",
     "#          abs_ylim='3%',\n",
     "#          abs_ylim=(0.975, 1.01),\n",
+    "#          item_no=5\n",
     "        )"
    ]
   },
@@ -60,7 +61,30 @@
     "import pandas as pd\n",
     "\n",
     "\n",
-    "tce_table = None\n",
+    "tce_tables = {}\n",
+    "\n",
+    "tce_files = [\n",
+    "    '/mnt/tess/astronet/tces-test.csv',\n",
+    "    '/mnt/tess/astronet/tces-toi.csv',\n",
+    "    '/mnt/tess/astronet/tces-s33_cam1_sample.csv',\n",
+    "    '/mnt/tess/astronet/tces-s33_cam2ccd14_sample.csv',\n",
+    "    '/mnt/tess/astronet/tces-tmp-all.csv',\n",
+    "]\n",
+    "\n",
+    "\n",
+    "def get_tce(tic, item_no):\n",
+    "    for f in tce_files:\n",
+    "        if f not in tce_tables:\n",
+    "            tce_tables[f] = pd.read_csv(f, header=0)\n",
+    "        tce_table = tce_tables[f]\n",
+    "        tce = tce_table[tce_table.tic_id == tic]\n",
+    "        if not len(tce):\n",
+    "            continue\n",
+    "        if len(tce) > 1:\n",
+    "            tce = tce[tce.index == tce.index.values[item_no]]\n",
+    "            print('Source:', 'BLS' if tce.Source.values.item() == 2 else 'TEV')\n",
+    "        return tce, f\n",
+    "    raise ValueError(f'no TCE data for {tic}')\n",
     "\n",
     "\n",
     "def plot_all(tic,\n",
@@ -70,15 +94,10 @@
     "             abs_xlim=None,\n",
     "             abs_offset=0,\n",
     "             abs_ylim=None,\n",
-    "             rpt_only=False):\n",
+    "             rpt_only=False,\n",
+    "             item_no=0):\n",
     "    tess_data_dir = f'/mnt/tess/lc'\n",
     "    reports_dir = f'/mnt/tess/rpt/png'\n",
-    "    tces_file = '/mnt/tess/astronet/tces-s33_cam2ccd14_sample.csv'\n",
-    "#     tces_file = '/mnt/tess/astronet/tces-tmp-all.csv'\n",
-    "\n",
-    "    global tce_table\n",
-    "    if tce_table is None:\n",
-    "        tce_table = pd.read_csv(tces_file, header=0)\n",
     "\n",
     "    if rpt_only:\n",
     "        plt.figure(figsize=(12, 8), dpi=dpi)\n",
@@ -86,7 +105,7 @@
     "        im = plt.imread(f'{reports_dir}/TIC{tic}.png')\n",
     "        _ = plt.imshow(im)\n",
     "        plt.show()\n",
-    "        print(tce_table[tce_table.tic_id == tic])\n",
+    "        print(get_tce(tic, item_no)[0])\n",
     "        return\n",
     "        \n",
     "    b = plt.get_cmap('tab20')(0)\n",
@@ -107,7 +126,7 @@
     "        fsize = (16, 4 * (plotrows + 1))\n",
     "        plt.figure(figsize=fsize, dpi=dpi)\n",
     "    \n",
-    "    tce = tce_table[tce_table.tic_id == tic]\n",
+    "    tce, tces_file = get_tce(tic, item_no)\n",
     "    period = tce.Period.values.item()\n",
     "    epoc = tce.Epoc.values.item()\n",
     "    duration = tce.Duration.values.item()\n",
@@ -284,8 +303,29 @@
    "outputs": [],
    "source": [
     "# bug: 220336762\n",
-    "# interpret predictions: 158869292\n",
+    "# interpret predictions: 158869292, 263337671\n",
     "# examine features that can catch the transit: 37496370"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# investigate why .3 fails for 219388773\n",
+    "# investigate why 133654092 is J for BLS params\n",
+    "# try to repro 347098457 with bls/tev params from the spreadsheet\n",
+    "# investigate instability for 82128636 bls/tev"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 373453507 should be positive"
    ]
   }
  ],
