--- a/Data.ipynb
+++ b/Data.ipynb
@@ -9,8 +9,8 @@
     "import os\n",
     "import tensorflow as tf\n",
     "\n",
-    "tces_file = '/mnt/tess/astronet/tces-v6-train.csv'\n",
-    "file_pattern = '/mnt/tess/astronet/tfrecords-23-train/*'\n",
+    "tces_file = '/mnt/tess/astronet/tces-toi.csv'\n",
+    "file_pattern = '/mnt/tess/astronet/tfrecords-toi/*'\n",
     "filenames = tf.io.gfile.glob(file_pattern)\n",
     "    \n",
     "filenames"
@@ -226,7 +226,7 @@
     "                    continue\n",
     "                if k.startswith('secondary_'):\n",
     "                    continue\n",
-    "                print(f'{k:25}: {v.numpy().item()}')\n",
+    "                print(f'{k:25}: {v.numpy()}')\n",
     "            global_view = np.array(d[0]['global_view'][0].numpy())\n",
     "            local_view = np.array(d[0]['local_view'][0].numpy())\n",
     "            secondary_view = np.array(d[0]['secondary_view'][0].numpy())\n",
@@ -248,7 +248,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tic_id = 188825647\n",
+    "tic_id = 77156829\n",
     "plot_ds_tce(ds, tic_id)\n",
     "tce_table[tce_table['tic_id'] == tic_id]"
    ]
