--- a/Lightcurve.ipynb
+++ b/Lightcurve.ipynb
@@ -23,12 +23,12 @@
    },
    "outputs": [],
    "source": [
-    "plot_all(373453507,\n",
+    "plot_all(77156829,\n",
     "#          rpt_only=True,\n",
     "#          large=True,\n",
-    "#          bkspace=0.3,\n",
+    "#          bkspace=5.0,\n",
     "#          abs_xlim='3p',\n",
-    "#          abs_offset=1477,\n",
+    "#          abs_offset=6,\n",
     "#          abs_xlim=(1300, 2500),\n",
     "#          abs_ylim='3%',\n",
     "#          abs_ylim=(0.975, 1.01),\n",
@@ -64,11 +64,13 @@
     "tce_tables = {}\n",
     "\n",
     "tce_files = [\n",
-    "    '/mnt/tess/astronet/tces-test.csv',\n",
     "    '/mnt/tess/astronet/tces-toi.csv',\n",
+    "    '/mnt/tess/astronet/tces-toi-bls-vs-tev.csv',\n",
     "    '/mnt/tess/astronet/tces-s33_cam1_sample.csv',\n",
     "    '/mnt/tess/astronet/tces-s33_cam2ccd14_sample.csv',\n",
-    "    '/mnt/tess/astronet/tces-tmp-all.csv',\n",
+    "    '/mnt/tess/astronet/tces-v6-train.csv',\n",
+    "    '/mnt/tess/astronet/tces-v6-val.csv',\n",
+    "    '/mnt/tess/astronet/tces-v6-test.csv',\n",
     "]\n",
     "\n",
     "\n",
@@ -82,7 +84,8 @@
     "            continue\n",
     "        if len(tce) > 1:\n",
     "            tce = tce[tce.index == tce.index.values[item_no]]\n",
-    "            print('Source:', 'BLS' if tce.Source.values.item() == 2 else 'TEV')\n",
+    "            if 'Source' in tce:\n",
+    "                print('Source:', 'BLS' if tce.Source.values.item() == 2 else 'TEV')\n",
     "        return tce, f\n",
     "    raise ValueError(f'no TCE data for {tic}')\n",
     "\n",
@@ -304,28 +307,21 @@
    "source": [
     "# bug: 220336762\n",
     "# interpret predictions: 158869292, 263337671\n",
-    "# examine features that can catch the transit: 37496370"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "# examine features that can catch the transit: 37496370\n",
+    "# nans in 153949511\n",
+    "\n",
     "# investigate why .3 fails for 219388773\n",
     "# investigate why 133654092 is J for BLS params\n",
     "# try to repro 347098457 with bls/tev params from the spreadsheet\n",
-    "# investigate instability for 82128636 bls/tev"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# 373453507 should be positive"
+    "# investigate instability for 82128636 bls/tev\n",
+    "\n",
+    "# 373453507 should be positive\n",
+    "# 260640693 is extreme case of long period / short duration\n",
+    "# 387834907 should be real, if period/duration were more accurate\n",
+    "\n",
+    "# test with period override TIC 219208037, T0 = 2458890.876869 (TJD = 1890.8769), Period = 0.97742551\n",
+    "\n",
+    "# 77156829 seems overly filtered?"
    ]
   }
  ],
