--- a/Preprocess.ipynb
+++ b/Preprocess.ipynb
@@ -122,6 +122,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "labels_table = pd.read_csv(labels_file, header=0, low_memory=False)\n",
+    "# labels_table['tic_id'] = labels_table['TIC ID']\n",
+    "\n",
+    "# labels_table[['tic_id', 'Final']]\n",
+    "labels_table.sample(50)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "pd.set_option('display.max_columns', None)\n",
     "t_train.sample(5)"
    ]
