--- a/Lightcurve.ipynb
+++ b/Lightcurve.ipynb
@@ -23,7 +23,7 @@
    },
    "outputs": [],
    "source": [
-    "plot_all(77156829,\n",
+    "plot_all(424876542,\n",
     "#          rpt_only=True,\n",
     "#          large=True,\n",
     "#          bkspace=5.0,\n",
@@ -177,7 +177,7 @@
     "    \n",
     "    \n",
     "    splt()\n",
-    "    ut, uf = preprocess.read_and_process_light_curve(tic, tess_data_dir, 'SAP_FLUX')\n",
+    "    ut, uf, _ = preprocess.read_and_process_light_curve(tic, tess_data_dir, 'SAP_FLUX')\n",
     "\n",
     "    input_mask = preprocess.get_spline_mask(ut, period, epoc, duration)\n",
     "    sf, mdata = keplersplinev2.choosekeplersplinev2(\n",
