Change individual samples view to double period. Add scripts for vetting.

--- a/Lightcurve.ipynb
+++ b/Lightcurve.ipynb
@@ -23,7 +23,7 @@
    },
    "outputs": [],
    "source": [
-    "plot_all(424876542,\n",
+    "plot_all(124181215,\n",
     "#          rpt_only=True,\n",
     "#          large=True,\n",
     "#          bkspace=5.0,\n",
@@ -263,8 +263,8 @@
     "    plot_w_scatter('global_view', 'global_std', 'global', 'global_transit_mask')\n",
     "    plot_w_scatter('local_view', 'local_std', f'local / {loc_scale:0.3}')\n",
     "    plot_w_scatter('secondary_view', 'secondary_std', f'secondary ({sec_phase:0.2}) / {sec_scale:0.5}')\n",
-    "    plot_norm('global_view_half_period', 'global half period')\n",
-    "    plot_norm('global_view_double_period', 'global double period (shifted)')\n",
+    "    plot_w_scatter('global_view_half_period', 'global_view_half_period_std', 'global half period')\n",
+    "    plot_w_scatter('global_view_double_period', 'global_view_double_period_std', 'global double period (shifted)')\n",
     "    splt()\n",
     "    plot_segments('sample_segments_view', '')\n",
     "\n",
