--- a/Preprocess-vetting.ipynb
+++ b/Preprocess-vetting.ipynb
@@ -9,9 +9,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total entries: 1700\n",
+      "Total labeled entries: 1698\n",
+      "Split sizes. Train: 1467; Valid: 231\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "\n",
@@ -21,30 +31,14 @@
     "\n",
     "\n",
     "tces_file = '/mnt/tess/labels/tce_bls_instar+old.csv'\n",
-    "ext_data_file = '/mnt/tess/labels/ext_mast_data.csv'\n",
-    "labels_file = '/mnt/tess/labels/labels_v7.csv'\n",
-    "splits_file = '/mnt/tess/labels/splits_v3.csv'\n",
+    "labels_file = '/mnt/tess/labels/labels_vetting_v1.csv'\n",
     "\n",
     "\n",
     "tce_table = pd.read_csv(tces_file, header=0, low_memory=False).set_index('tic_id')\n",
     "tce_table = tce_table.drop(columns=['Unnamed: 0'])\n",
     "tce_table['Duration'] /= 24.0\n",
     "\n",
-    "# Drop some common invalid examples.\n",
-    "# Orbits falling inside the star\n",
-    "tce_table = tce_table[~tce_table.Ilabel]\n",
-    "# Excessively large durations\n",
-    "tce_table = tce_table[tce_table.Duration < 0.9 * tce_table.Period]\n",
-    "\n",
     "joined_table = tce_table\n",
-    "\n",
-    "ext_table = pd.read_csv(ext_data_file, header=0, low_memory=False).set_index('tic_id')\n",
-    "joined_table = joined_table.join(ext_table, on='tic_id', how='left')\n",
-    "\n",
-    "joined_table = joined_table[\n",
-    "    joined_table['objType'].isnull()\n",
-    "    | (joined_table['objType'] == 'STAR')\n",
-    "]\n",
     "\n",
     "joined_table = joined_table.reset_index()[[\n",
     "    'tic_id', 'RA', 'Dec', 'Tmag', 'Epoc', 'Period', 'Duration',\n",
@@ -54,8 +48,11 @@
     "\n",
     "\n",
     "labels_table = pd.read_csv(labels_file, header=0, low_memory=False)\n",
-    "disps = ['E', 'J', 'N', 'S', 'B']\n",
-    "users = ['av', 'md', 'ch', 'as', 'mk', 'et']\n",
+    "labels_table = labels_table.drop(columns=['261262721'])\n",
+    "labels_table['tic_id'] = labels_table['TIC ID']\n",
+    "\n",
+    "disps = ['e', 'p', 'n', 'b', 't', 'u']\n",
+    "users = ['ch', 'et', 'md', 'as', 'mk']\n",
     "\n",
     "for d in disps:\n",
     "    labels_table[f'disp_{d}'] = 0\n",
@@ -63,19 +60,18 @@
     "def set_labels(row):\n",
     "    a = ~row.isna()\n",
     "    if a['Final']:\n",
-    "        row[f'disp_{row[\"Final\"]}'] = 1\n",
+    "        row[f'disp_{row[\"Final\"][0]}'] = 1\n",
+    "        row[f'disp_{row[\"Final\"][1]}'] = 1\n",
     "    else:\n",
     "        for user in users:\n",
-    "            if a[user] and row[user] and row[user] != 'U':\n",
-    "                row[f'disp_{row[user]}'] += 1\n",
+    "            if a[user] and row[user]:\n",
+    "                row[f'disp_{row[user][0]}'] += 1\n",
+    "                row[f'disp_{row[user][1]}'] += 1\n",
     "                        \n",
     "    return row\n",
     "\n",
-    "labels_table['tic_id'] = labels_table['TIC ID']\n",
     "labels_table = labels_table.apply(set_labels, axis=1)\n",
-    "\n",
-    "labels_table = labels_table[['tic_id'] + [f'disp_{d}' for d in disps]]\n",
-    "\n",
+    "labels_table = labels_table[['tic_id', 'Split'] + [f'disp_{d}' for d in disps]]\n",
     "\n",
     "joined_table = joined_table.set_index('tic_id')\n",
     "labels_table = labels_table.set_index('tic_id')\n",
@@ -88,24 +84,15 @@
     "\n",
     "\n",
     "all_table = joined_table\n",
-    "splits_table = pd.read_csv(splits_file, header=0, low_memory=False)\n",
-    "splits_table['tic_id'] = splits_table['TIC ID']\n",
-    "splits_table = splits_table.set_index('tic_id')\n",
-    "joined_table = joined_table.join(splits_table, on='tic_id', how='inner')\n",
     "\n",
     "t_train = joined_table[joined_table['Split'] == 'train']\n",
     "t_val = joined_table[joined_table['Split'] == 'val']\n",
-    "t_test = joined_table[joined_table['Split'] == 'test']\n",
-    "t_train = t_train.drop(columns=['Hemisphere', 'Seed randbetween(1, 100)', 'Split'])\n",
-    "t_val = t_val.drop(columns=['Hemisphere', 'Seed randbetween(1, 100)', 'Split'])\n",
-    "t_test = t_test.drop(columns=['Hemisphere', 'Seed randbetween(1, 100)', 'Split'])\n",
-    "print(f'Split sizes. Train: {len(t_train)}; Valid: {len(t_val)}; Test: {len(t_test)}')\n",
+    "print(f'Split sizes. Train: {len(t_train)}; Valid: {len(t_val)}')\n",
     "\n",
     "\n",
-    "t_train.to_csv('/mnt/tess/astronet/tces-v7-train.csv')\n",
-    "t_val.to_csv('/mnt/tess/astronet/tces-v7-val.csv')\n",
-    "t_test.to_csv('/mnt/tess/astronet/tces-v7-test.csv')\n",
-    "all_table.to_csv('/mnt/tess/astronet/tces-tmp-all.csv')"
+    "# t_train.to_csv('/mnt/tess/astronet/tces-vetting-v1-train.csv')\n",
+    "# t_val.to_csv('/mnt/tess/astronet/tces-vetting-v1-val.csv')\n",
+    "# all_table.to_csv('/mnt/tess/astronet/tces-vetting-all.csv')"
    ]
   },
   {
@@ -115,10 +102,7 @@
    "outputs": [],
    "source": [
     "labels_table = pd.read_csv(labels_file, header=0, low_memory=False)\n",
-    "# labels_table['tic_id'] = labels_table['TIC ID']\n",
-    "\n",
-    "# labels_table[['tic_id', 'Final']]\n",
-    "labels_table.sample(50)"
+    "labels_table.sample(3)"
    ]
   },
   {
@@ -138,15 +122,6 @@
    "outputs": [],
    "source": [
     "t_val.sample(5)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "t_test.sample(5)"
    ]
   },
   {
