Only generate necessary features.

--- a/Lightcurve-vetting.ipynb
+++ b/Lightcurve-vetting.ipynb
@@ -105,6 +105,7 @@
     "      '--tess_data_dir', tess_data_dir,\n",
     "      '--output_dir', '/dev/null',\n",
     "      '--input_tce_csv_file', tces_file,\n",
+    "      '--vetting_features', 'y',\n",
     "    ])\n",
     "\n",
     "\n",
