--- a/Preprocess-vetting.ipynb
+++ b/Preprocess-vetting.ipynb
@@ -9,19 +9,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Total entries: 1700\n",
-      "Total labeled entries: 1698\n",
-      "Split sizes. Train: 1467; Valid: 231\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "\n",
@@ -89,6 +79,9 @@
     "t_val = joined_table[joined_table['Split'] == 'val']\n",
     "print(f'Split sizes. Train: {len(t_train)}; Valid: {len(t_val)}')\n",
     "\n",
+    "t_train = t_train.drop(columns=['Split'])\n",
+    "t_val = t_val.drop(columns=['Split'])\n",
+    "all_table = all_table.drop(columns=['Split'])\n",
     "\n",
     "# t_train.to_csv('/mnt/tess/astronet/tces-vetting-v1-train.csv')\n",
     "# t_val.to_csv('/mnt/tess/astronet/tces-vetting-v1-val.csv')\n",
